v3.0.0/_sources/lcls-plc-lfe-optics_lfe_optics_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.88.30.1.1
      -
    * - Target IP address
      - 172.21.88.30
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _lfe_optics_pragmas:

Pragmas
-------

Total pragmas found: 95
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.8.2
        lcls-twincat-motion, SLAC, , 4.0.9
        lcls2-cc-lib, SLAC, Unset, 2.0.0
        PMPS, SLAC - LCLS, , 3.3.0
        Tc2_ControllerToolbox, Beckhoff Automation GmbH, Unset, Unset
        Tc2_MC2, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        VisuDialogs, System, Unset, Unset
        VisuElemMeter, System, 3.5.10.0, 3.5.10.0
        VisuElems, System, 3.5.10.40, 3.5.10.40
        VisuElemsSpecialControls, System, 3.5.10.0, 3.5.10.0
        VisuElemsWinControls, System, 3.5.10.40, 3.5.10.40
        VisuElemTextEditor, System, 3.5.10.10, 3.5.10.10
        visuinputs, system, 3.5.10.0, 3.5.10.0
        VisuNativeControl, System, 3.5.10.40, 3.5.10.40

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 3366464 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 652539616 (8)
        Constants.bLittleEndian, BOOL, 652393808 (8)
        Constants.bMulticoreSupport, BOOL, 652539624 (8)
        Constants.bSimulationMode, BOOL, 652393816 (8)
        Constants.CompilerVersion, VERSION, 654640768 (64)
        Constants.CompilerVersionNumeric, DWORD, 654640864 (32)
        Constants.nPackMode, UINT, 652393840 (16)
        Constants.nRegisterSize, WORD, 652393824 (16)
        Constants.RuntimeVersion, VERSION, 654640704 (64)
        Constants.RuntimeVersionNumeric, DWORD, 654640832 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 3072064 (64)
        DefaultGlobals.stSys, ST_System, 3072000 (40)


FB_DynMem_Manager
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        FB_DynMem_Manager.nInstanceCreations, UINT, 634600464 (16)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 3072048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 3365600 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 3365728 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 3365760 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 3365792 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>274 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 3157440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 3157344 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 3157376 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 3157216 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 3157312 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 3157152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 3157408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 3157184 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 3157248 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 3157280 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 3157024 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 3156800 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 3156928 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 3156992 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 3156896 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 3157056 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 3157088 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 3156864 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 3156832 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 3156960 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 3156736 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 3157120 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 3156704 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 3156768 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 3157472 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 3157504 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 3158560 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 3158496 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 3158592 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 3158624 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 3158656 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 3158688 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 3158528 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 3156592 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 3156528 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 3156656 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 3156368 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 3156640 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 3156400 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 3156352 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 3156480 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 3156672 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 3156496 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 3156512 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 3156608 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 3156384 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 3156576 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 3156432 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 3156464 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 3156544 (16)
        Global_Variables.ADSSTATE_START, UINT, 3156416 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 3156448 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 3156624 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 3156560 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 3224256 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 3224288 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 3222992 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 3156064 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 3073136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 3156288 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 3156304 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 3156176 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 3156096 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 3156160 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 3156192 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 3156112 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 3156128 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 3156144 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 3156208 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 3156224 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 3156240 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 3156256 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 3156272 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 3156080 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 3156336 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 3156320 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 3365776 (16)
        Global_Variables.ASCII_DLE, BYTE, 3365472 (8)
        Global_Variables.ASCII_ETX, BYTE, 3365464 (8)
        Global_Variables.ASCII_NAK, BYTE, 3365480 (8)
        Global_Variables.ASCII_STX, BYTE, 3363224 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 3158720 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 3156696 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 3073128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 3072328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 3156688 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 3364384 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 3364288 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 3364320 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 3364224 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 3364192 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 3364576 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 3364448 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 3364256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 3364608 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 3364640 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 3364512 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 3364416 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 3364544 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 3364480 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 3364352 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 3364672 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 3364736 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 3364768 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 3364704 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 3364864 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 3364800 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 3364928 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 3364896 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 3364832 (32)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 3367456 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 3237216 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 3237248 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 3243520 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 3243488 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 3243456 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 3243552 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 3159392 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634608448 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 3360720 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 3160984 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 3360728 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 3360736 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634608384 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 3224864 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 3362888 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 3362592 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 3362464 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 3223008 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 3159376 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 3224352 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 3224336 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 3224368 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 3224384 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 3224400 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 3224704 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 3224480 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 3224800 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 3224576 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 3224768 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 3224832 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 3224416 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 3224448 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 3224640 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 3224544 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 3224672 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 3224736 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 3224608 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 3224512 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 3158816 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 3158880 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 3158848 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 3158752 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 3158912 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 3158784 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 3225216 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 3224960 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 3224320 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 3160992 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 3160976 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 3160944 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 3160960 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 3224224 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 3222656 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 3222688 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 3367392 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 3367424 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 3222560 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 3222528 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 3222496 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT (2..100), 3160928 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 3222720 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 3222848 (16)
        Global_Variables.MAX_RETRIES, INT, 3365488 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 3222872 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 3222864 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 3222984 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 3159488 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 3367488 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 3222976 (8)
        Global_Variables.nWatchdogTime, BYTE, 3158744 (8)
        Global_Variables.PI, LREAL, 3159424 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 3222912 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 3222944 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 3222880 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 3222752 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 3158304 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 3157664 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 3157632 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 3222784 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 3222816 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 3157728 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 3158048 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 3158016 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 3224192 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 3157888 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 3157696 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 3157984 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 3157920 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 3157760 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 3158080 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 3157952 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 3157824 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 3157856 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 3157792 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 3222592 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 3222624 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 3158112 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 3157536 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 3157568 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 3157600 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 3158176 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 3158144 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 3158208 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 3158272 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 3158240 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 3158728 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 3158736 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 3231840 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 3232192 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 3231776 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 3232128 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 3231552 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 3230704 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 3231088 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 3231712 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 3232064 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 3231584 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 3231936 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 3231648 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 3232000 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 3159360 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 3159344 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 3159248 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 3159184 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 3159200 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 3159216 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 3159168 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 3159232 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 3159312 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 3159264 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 3159296 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 3159328 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 3159280 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634601376 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 3366784 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 3366528 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 3366496 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 3366720 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 3366752 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 3366592 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 3366624 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 3366656 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 3366560 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 3366688 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 3367040 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 3366912 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 3366880 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 3366816 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 3366976 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 3367008 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 3366848 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 3366944 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 3367936 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 3367520 (416)
        Global_Variables.TIMEOUT_QVZ, TIME, 3365536 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 3365568 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 3365504 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 3158432 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 3158336 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 3158400 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 3158368 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 3158464 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 3232256 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_lcls_twincat_motion, ST_LibVersion, 634588512 (288)
        Global_Version.stLibVersion_lcls_twincat_optics, ST_LibVersion, 634613120 (288)
        Global_Version.stLibVersion_PMPS, ST_LibVersion, 634600800 (288)
        Global_Version.stLibVersion_Tc2_ControllerToolbox, ST_LibVersion, 634613408 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 3155200 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 3363328 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634608512 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634601088 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 3363616 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 3363904 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 3155488 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 3155776 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 3160640 (288)
        Global_Version.stLibVersion_Tc3_DynamicMemory, ST_LibVersion, 634610112 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 3366048 (288)
        Global_Version.stLibVersion_Tc3_IPCDiag, ST_LibVersion, 634608800 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 3368352 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 3160032 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 633569024 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 3365984 (32)


GVL_COM_Buffers
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM_Buffers.Serial_RXBuffer_M1L0, ComBuffer, 652678528 (2512)
        GVL_COM_Buffers.Serial_RXBuffer_M2L0, ComBuffer, 652683552 (2512)
        GVL_COM_Buffers.Serial_TXBuffer_M1L0, ComBuffer, 652681040 (2512)
        GVL_COM_Buffers.Serial_TXBuffer_M2L0, ComBuffer, 652686064 (2512)


GVL_Constants
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Constants.cPiezoMaxVoltage, LREAL, 634610496 (64)
        GVL_Constants.cPiezoMinVoltage, LREAL, 634610560 (64)
        GVL_Constants.cPiezoRange, REAL, 634608352 (32)
        GVL_Constants.nGANTRY_TOLERANCE_NM_DEFAULT, LINT, 634610432 (64)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 3366336 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 3072040 (8)
        GVL_Logger.cLogHost, STRING(15), 3072128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 3073216 (81984)
        GVL_Logger.iLogPort, UINT, 3072256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 3073184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 3072384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 3072352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 3072336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 3072416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 3072448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 3072272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 3072480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 3073152 (32)

.. raw:: html

   </details>
   <br />


GVL_M1L0
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1L0.M1L0_Pitch, HOMS_PitchMechanism, 652688576 (2496)
        GVL_M1L0.M1L0_Pitch.diEncCnt, LINT, 652691008 (64)


GVL_M1L0_Constants
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1L0_Constants.nXDWN_ENC_REF, ULINT, 652692416 (64)
        GVL_M1L0_Constants.nXUP_ENC_REF, ULINT, 652692352 (64)
        GVL_M1L0_Constants.nYDWN_ENC_REF, ULINT, 652692288 (64)
        GVL_M1L0_Constants.nYUP_ENC_REF, ULINT, 652692224 (64)


GVL_M2L0
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M2L0.M2L0_Pitch, HOMS_PitchMechanism, 652692480 (2496)
        GVL_M2L0.M2L0_Pitch.diEncCnt, LINT, 652694912 (64)


GVL_M2L0_Constants
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M2L0_Constants.nXDWN_ENC_REF, ULINT, 652696320 (64)
        GVL_M2L0_Constants.nXUP_ENC_REF, ULINT, 652696256 (64)
        GVL_M2L0_Constants.nYDWN_ENC_REF, ULINT, 652696192 (64)
        GVL_M2L0_Constants.nYUP_ENC_REF, ULINT, 652696128 (64)


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 3370784 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 3368688 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 3368672 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 3368656 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 3368640 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 3370816 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 3368704 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 3368696 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 3368736 (2048)


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 652696384 (495296)
        GVL_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 652696648 (8)
        GVL_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 653191680 (495296)
        GVL_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 653191944 (8)
        GVL_PMPS.g_fbArbiter1, FB_Arbiter, 653686976 (474624)
        GVL_PMPS.g_fbArbiter2, FB_Arbiter, 654161600 (474624)


GVL_SerialIO
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SerialIO.Serial_stComIn_M1L0, EL6inData22B, 654636224 (192)
        GVL_SerialIO.Serial_stComIn_M2L0, EL6inData22B, 654636608 (192)
        GVL_SerialIO.Serial_stComOut_M1L0, EL6outData22B, 654636416 (192)
        GVL_SerialIO.Serial_stComOut_M2L0, EL6outData22B, 654636800 (192)


GVL_States
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_States.stDefaultY, ST_PositionState, 654636992 (3712)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 625248160 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT (UINT#1..GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite), 625232160 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 3370808 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 625198080 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 625198048 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 625200128 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 625200144 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 3370848 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 625200160 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 3370800 (8)


GVL_TestStructs
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TestStructs.TestPitch_LimitSwitches, HOMS_PitchMechanism, 634610624 (2496)


lcls_twincat_optics
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        lcls_twincat_optics.GVL_TestStructs.TestPitch_LimitSwitches.diEncCnt, LINT, 634613056 (64)


Main
^^^^

.. raw:: html

   <details>
       <summary>304 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.fbBenderM1L0, FB_Bender, 638875648 (128)
        Main.fbBenderM2L0, FB_Bender, 642861376 (128)
        Main.fbBenderRMSErrorM1L0, FB_RMSWatch, 638488640 (386880)
        Main.fbBenderRMSErrorM2L0, FB_RMSWatch, 642474368 (386880)
        Main.fbLogHandler, FB_LogHandler, 642866240 (5784896)
        Main.fbMotionStage_m1, FB_MotionStage, 634920704 (299392)
        Main.fbMotionStage_m1.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 634923200 (2048)
        Main.fbMotionStage_m1.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 634922176 (1024)
        Main.fbMotionStage_m10, FB_MotionStage, 639882560 (299392)
        Main.fbMotionStage_m10.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639885056 (2048)
        Main.fbMotionStage_m10.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639884032 (1024)
        Main.fbMotionStage_m11, FB_MotionStage, 640207936 (299392)
        Main.fbMotionStage_m11.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640210432 (2048)
        Main.fbMotionStage_m11.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640209408 (1024)
        Main.fbMotionStage_m12, FB_MotionStage, 640533312 (299392)
        Main.fbMotionStage_m12.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640535808 (2048)
        Main.fbMotionStage_m12.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640534784 (1024)
        Main.fbMotionStage_m2, FB_MotionStage, 635246080 (299392)
        Main.fbMotionStage_m2.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635248576 (2048)
        Main.fbMotionStage_m2.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635247552 (1024)
        Main.fbMotionStage_m3, FB_MotionStage, 635571456 (299392)
        Main.fbMotionStage_m3.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635573952 (2048)
        Main.fbMotionStage_m3.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635572928 (1024)
        Main.fbMotionStage_m4, FB_MotionStage, 635896832 (299392)
        Main.fbMotionStage_m4.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635899328 (2048)
        Main.fbMotionStage_m4.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635898304 (1024)
        Main.fbMotionStage_m5, FB_MotionStage, 636222208 (299392)
        Main.fbMotionStage_m5.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636224704 (2048)
        Main.fbMotionStage_m5.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636223680 (1024)
        Main.fbMotionStage_m6, FB_MotionStage, 636547584 (299392)
        Main.fbMotionStage_m6.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636550080 (2048)
        Main.fbMotionStage_m6.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636549056 (1024)
        Main.fbMotionStage_m7, FB_MotionStage, 638906432 (299392)
        Main.fbMotionStage_m7.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638908928 (2048)
        Main.fbMotionStage_m7.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638907904 (1024)
        Main.fbMotionStage_m8, FB_MotionStage, 639231808 (299392)
        Main.fbMotionStage_m8.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639234304 (2048)
        Main.fbMotionStage_m8.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639233280 (1024)
        Main.fbMotionStage_m9, FB_MotionStage, 639557184 (299392)
        Main.fbMotionStage_m9.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639559680 (2048)
        Main.fbMotionStage_m9.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639558656 (1024)
        Main.fbMR1L0GantryStats, FB_HomsStats, 636867648 (459968)
        Main.fbMR1L0GantryStats.fbUpStreamX.Axis.NcToPlc, NCTOPLC_AXIS_REF, 636915456 (2048)
        Main.fbMR1L0GantryStats.fbUpStreamX.Axis.PlcToNc, PLCTONC_AXIS_REF, 636914432 (1024)
        Main.fbMR1L0GantryStats.fbUpStreamX.bBrakeRelease, BOOL, 636923480 (8)
        Main.fbMR1L0GantryStats.fbUpStreamX.bHardwareEnable, BOOL, 636923488 (8)
        Main.fbMR1L0GantryStats.fbUpStreamX.bHome, BOOL, 636923472 (8)
        Main.fbMR1L0GantryStats.fbUpStreamX.bLimitBackwardEnable, BOOL, 636923464 (8)
        Main.fbMR1L0GantryStats.fbUpStreamX.bLimitForwardEnable, BOOL, 636923456 (8)
        Main.fbMR1L0GantryStats.fbUpStreamX.nRawEncoderINT, INT, 636923600 (16)
        Main.fbMR1L0GantryStats.fbUpStreamX.nRawEncoderUINT, UINT, 636923584 (16)
        Main.fbMR1L0GantryStats.fbUpStreamX.nRawEncoderULINT, ULINT, 636923520 (64)
        Main.fbMR1L0GantryStats.fbUpStreamY.Axis.NcToPlc, NCTOPLC_AXIS_REF, 636889472 (2048)
        Main.fbMR1L0GantryStats.fbUpStreamY.Axis.PlcToNc, PLCTONC_AXIS_REF, 636888448 (1024)
        Main.fbMR1L0GantryStats.fbUpStreamY.bBrakeRelease, BOOL, 636897496 (8)
        Main.fbMR1L0GantryStats.fbUpStreamY.bHardwareEnable, BOOL, 636897504 (8)
        Main.fbMR1L0GantryStats.fbUpStreamY.bHome, BOOL, 636897488 (8)
        Main.fbMR1L0GantryStats.fbUpStreamY.bLimitBackwardEnable, BOOL, 636897480 (8)
        Main.fbMR1L0GantryStats.fbUpStreamY.bLimitForwardEnable, BOOL, 636897472 (8)
        Main.fbMR1L0GantryStats.fbUpStreamY.nRawEncoderINT, INT, 636897616 (16)
        Main.fbMR1L0GantryStats.fbUpStreamY.nRawEncoderUINT, UINT, 636897600 (16)
        Main.fbMR1L0GantryStats.fbUpStreamY.nRawEncoderULINT, ULINT, 636897536 (64)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.bSTOEnable1, BOOL, 636868640 (8)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.bSTOEnable2, BOOL, 636868648 (8)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 636879104 (64)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 636879232 (64)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 636869632 (64)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 636869760 (64)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 636869056 (128)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 636868928 (128)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 636868800 (128)
        Main.fbMR1L0GantryStats.homs.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 636868672 (128)
        Main.fbMR2L0GantryStats, FB_HomsStats, 640853376 (459968)
        Main.fbMR2L0GantryStats.fbUpStreamX.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640901184 (2048)
        Main.fbMR2L0GantryStats.fbUpStreamX.Axis.PlcToNc, PLCTONC_AXIS_REF, 640900160 (1024)
        Main.fbMR2L0GantryStats.fbUpStreamX.bBrakeRelease, BOOL, 640909208 (8)
        Main.fbMR2L0GantryStats.fbUpStreamX.bHardwareEnable, BOOL, 640909216 (8)
        Main.fbMR2L0GantryStats.fbUpStreamX.bHome, BOOL, 640909200 (8)
        Main.fbMR2L0GantryStats.fbUpStreamX.bLimitBackwardEnable, BOOL, 640909192 (8)
        Main.fbMR2L0GantryStats.fbUpStreamX.bLimitForwardEnable, BOOL, 640909184 (8)
        Main.fbMR2L0GantryStats.fbUpStreamX.nRawEncoderINT, INT, 640909328 (16)
        Main.fbMR2L0GantryStats.fbUpStreamX.nRawEncoderUINT, UINT, 640909312 (16)
        Main.fbMR2L0GantryStats.fbUpStreamX.nRawEncoderULINT, ULINT, 640909248 (64)
        Main.fbMR2L0GantryStats.fbUpStreamY.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640875200 (2048)
        Main.fbMR2L0GantryStats.fbUpStreamY.Axis.PlcToNc, PLCTONC_AXIS_REF, 640874176 (1024)
        Main.fbMR2L0GantryStats.fbUpStreamY.bBrakeRelease, BOOL, 640883224 (8)
        Main.fbMR2L0GantryStats.fbUpStreamY.bHardwareEnable, BOOL, 640883232 (8)
        Main.fbMR2L0GantryStats.fbUpStreamY.bHome, BOOL, 640883216 (8)
        Main.fbMR2L0GantryStats.fbUpStreamY.bLimitBackwardEnable, BOOL, 640883208 (8)
        Main.fbMR2L0GantryStats.fbUpStreamY.bLimitForwardEnable, BOOL, 640883200 (8)
        Main.fbMR2L0GantryStats.fbUpStreamY.nRawEncoderINT, INT, 640883344 (16)
        Main.fbMR2L0GantryStats.fbUpStreamY.nRawEncoderUINT, UINT, 640883328 (16)
        Main.fbMR2L0GantryStats.fbUpStreamY.nRawEncoderULINT, ULINT, 640883264 (64)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.bSTOEnable1, BOOL, 640854368 (8)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.bSTOEnable2, BOOL, 640854376 (8)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 640864832 (64)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 640864960 (64)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 640855360 (64)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 640855488 (64)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 640854784 (128)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 640854656 (128)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 640854528 (128)
        Main.fbMR2L0GantryStats.homs.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 640854400 (128)
        Main.fbPitchRMSErrorM1L0, FB_RMSWatch, 638101632 (386880)
        Main.fbPitchRMSErrorM2L0, FB_RMSWatch, 642087360 (386880)
        Main.fbXRMSErrorM1L0, FB_RMSWatch, 637714624 (386880)
        Main.fbXRMSErrorM2L0, FB_RMSWatch, 641700352 (386880)
        Main.fbYRMSErrorM1L0, FB_RMSWatch, 637327616 (386880)
        Main.fbYRMSErrorM2L0, FB_RMSWatch, 641313344 (386880)
        Main.fEncLeverArm_mm, LREAL, 642866176 (64)
        Main.fEncRefPitchM1L0_urad, LREAL, 638880384 (64)
        Main.fEncRefPitchM2L0_urad, LREAL, 642866112 (64)
        Main.fMaxBenderRMSErrorM1L0, LREAL, 638875520 (64)
        Main.fMaxBenderRMSErrorM2L0, LREAL, 642861248 (64)
        Main.fMaxPitchRMSErrorM1L0, LREAL, 638488512 (64)
        Main.fMaxPitchRMSErrorM2L0, LREAL, 642474240 (64)
        Main.fMaxXRMSErrorM1L0, LREAL, 638101504 (64)
        Main.fMaxXRMSErrorM2L0, LREAL, 642087232 (64)
        Main.fMaxYRMSErrorM1L0, LREAL, 637714496 (64)
        Main.fMaxYRMSErrorM2L0, LREAL, 641700224 (64)
        Main.fMinBenderRMSErrorM1L0, LREAL, 638875584 (64)
        Main.fMinBenderRMSErrorM2L0, LREAL, 642861312 (64)
        Main.fMinPitchRMSErrorM1L0, LREAL, 638488576 (64)
        Main.fMinPitchRMSErrorM2L0, LREAL, 642474304 (64)
        Main.fMinXRMSErrorM1L0, LREAL, 638101568 (64)
        Main.fMinXRMSErrorM2L0, LREAL, 642087296 (64)
        Main.fMinYRMSErrorM1L0, LREAL, 637714560 (64)
        Main.fMinYRMSErrorM2L0, LREAL, 641700288 (64)
        Main.M1, ST_MotionStage, 634894720 (25984)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 634895808 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 634894784 (1024)
        Main.M1.bBrakeRelease, BOOL, 634903832 (8)
        Main.M1.bHardwareEnable, BOOL, 634903840 (8)
        Main.M1.bHome, BOOL, 634903824 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 634903816 (8)
        Main.M1.bLimitForwardEnable, BOOL, 634903808 (8)
        Main.M1.nRawEncoderINT, INT, 634903952 (16)
        Main.M1.nRawEncoderUINT, UINT, 634903936 (16)
        Main.M1.nRawEncoderULINT, ULINT, 634903872 (64)
        Main.M10, ST_MotionStage, 639856576 (25984)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 639857664 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 639856640 (1024)
        Main.M10.bBrakeRelease, BOOL, 639865688 (8)
        Main.M10.bHardwareEnable, BOOL, 639865696 (8)
        Main.M10.bHome, BOOL, 639865680 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 639865672 (8)
        Main.M10.bLimitForwardEnable, BOOL, 639865664 (8)
        Main.M10.nRawEncoderINT, INT, 639865808 (16)
        Main.M10.nRawEncoderUINT, UINT, 639865792 (16)
        Main.M10.nRawEncoderULINT, ULINT, 639865728 (64)
        Main.M11, ST_MotionStage, 640181952 (25984)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640183040 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 640182016 (1024)
        Main.M11.bBrakeRelease, BOOL, 640191064 (8)
        Main.M11.bHardwareEnable, BOOL, 640191072 (8)
        Main.M11.bHome, BOOL, 640191056 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 640191048 (8)
        Main.M11.bLimitForwardEnable, BOOL, 640191040 (8)
        Main.M11.nRawEncoderINT, INT, 640191184 (16)
        Main.M11.nRawEncoderUINT, UINT, 640191168 (16)
        Main.M11.nRawEncoderULINT, ULINT, 640191104 (64)
        Main.M12, ST_MotionStage, 640507328 (25984)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640508416 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 640507392 (1024)
        Main.M12.bBrakeRelease, BOOL, 640516440 (8)
        Main.M12.bHardwareEnable, BOOL, 640516448 (8)
        Main.M12.bHome, BOOL, 640516432 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 640516424 (8)
        Main.M12.bLimitForwardEnable, BOOL, 640516416 (8)
        Main.M12.nRawEncoderINT, INT, 640516560 (16)
        Main.M12.nRawEncoderUINT, UINT, 640516544 (16)
        Main.M12.nRawEncoderULINT, ULINT, 640516480 (64)
        Main.M1L0, DUT_HOMS, 636846976 (20672)
        Main.M1L0.fbRunHOMS.bSTOEnable1, BOOL, 636847904 (8)
        Main.M1L0.fbRunHOMS.bSTOEnable2, BOOL, 636847912 (8)
        Main.M1L0.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 636858368 (64)
        Main.M1L0.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 636858496 (64)
        Main.M1L0.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 636848896 (64)
        Main.M1L0.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 636849024 (64)
        Main.M1L0.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 636848320 (128)
        Main.M1L0.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 636848192 (128)
        Main.M1L0.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 636848064 (128)
        Main.M1L0.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 636847936 (128)
        Main.M2, ST_MotionStage, 635220096 (25984)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 635221184 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 635220160 (1024)
        Main.M2.bBrakeRelease, BOOL, 635229208 (8)
        Main.M2.bHardwareEnable, BOOL, 635229216 (8)
        Main.M2.bHome, BOOL, 635229200 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 635229192 (8)
        Main.M2.bLimitForwardEnable, BOOL, 635229184 (8)
        Main.M2.nRawEncoderINT, INT, 635229328 (16)
        Main.M2.nRawEncoderUINT, UINT, 635229312 (16)
        Main.M2.nRawEncoderULINT, ULINT, 635229248 (64)
        Main.M2L0, DUT_HOMS, 640832704 (20672)
        Main.M2L0.fbRunHOMS.bSTOEnable1, BOOL, 640833632 (8)
        Main.M2L0.fbRunHOMS.bSTOEnable2, BOOL, 640833640 (8)
        Main.M2L0.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 640844096 (64)
        Main.M2L0.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 640844224 (64)
        Main.M2L0.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 640834624 (64)
        Main.M2L0.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 640834752 (64)
        Main.M2L0.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 640834048 (128)
        Main.M2L0.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 640833920 (128)
        Main.M2L0.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 640833792 (128)
        Main.M2L0.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 640833664 (128)
        Main.M3, ST_MotionStage, 635545472 (25984)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 635546560 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 635545536 (1024)
        Main.M3.bBrakeRelease, BOOL, 635554584 (8)
        Main.M3.bHardwareEnable, BOOL, 635554592 (8)
        Main.M3.bHome, BOOL, 635554576 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 635554568 (8)
        Main.M3.bLimitForwardEnable, BOOL, 635554560 (8)
        Main.M3.nRawEncoderINT, INT, 635554704 (16)
        Main.M3.nRawEncoderUINT, UINT, 635554688 (16)
        Main.M3.nRawEncoderULINT, ULINT, 635554624 (64)
        Main.M4, ST_MotionStage, 635870848 (25984)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 635871936 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 635870912 (1024)
        Main.M4.bBrakeRelease, BOOL, 635879960 (8)
        Main.M4.bHardwareEnable, BOOL, 635879968 (8)
        Main.M4.bHome, BOOL, 635879952 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 635879944 (8)
        Main.M4.bLimitForwardEnable, BOOL, 635879936 (8)
        Main.M4.nRawEncoderINT, INT, 635880080 (16)
        Main.M4.nRawEncoderUINT, UINT, 635880064 (16)
        Main.M4.nRawEncoderULINT, ULINT, 635880000 (64)
        Main.M5, ST_MotionStage, 636196224 (25984)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 636197312 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 636196288 (1024)
        Main.M5.bBrakeRelease, BOOL, 636205336 (8)
        Main.M5.bHardwareEnable, BOOL, 636205344 (8)
        Main.M5.bHome, BOOL, 636205328 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 636205320 (8)
        Main.M5.bLimitForwardEnable, BOOL, 636205312 (8)
        Main.M5.nRawEncoderINT, INT, 636205456 (16)
        Main.M5.nRawEncoderUINT, UINT, 636205440 (16)
        Main.M5.nRawEncoderULINT, ULINT, 636205376 (64)
        Main.M6, ST_MotionStage, 636521600 (25984)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 636522688 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 636521664 (1024)
        Main.M6.bBrakeRelease, BOOL, 636530712 (8)
        Main.M6.bHardwareEnable, BOOL, 636530720 (8)
        Main.M6.bHome, BOOL, 636530704 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 636530696 (8)
        Main.M6.bLimitForwardEnable, BOOL, 636530688 (8)
        Main.M6.nRawEncoderINT, INT, 636530832 (16)
        Main.M6.nRawEncoderUINT, UINT, 636530816 (16)
        Main.M6.nRawEncoderULINT, ULINT, 636530752 (64)
        Main.M7, ST_MotionStage, 638880448 (25984)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 638881536 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 638880512 (1024)
        Main.M7.bBrakeRelease, BOOL, 638889560 (8)
        Main.M7.bHardwareEnable, BOOL, 638889568 (8)
        Main.M7.bHome, BOOL, 638889552 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 638889544 (8)
        Main.M7.bLimitForwardEnable, BOOL, 638889536 (8)
        Main.M7.nRawEncoderINT, INT, 638889680 (16)
        Main.M7.nRawEncoderUINT, UINT, 638889664 (16)
        Main.M7.nRawEncoderULINT, ULINT, 638889600 (64)
        Main.M8, ST_MotionStage, 639205824 (25984)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 639206912 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 639205888 (1024)
        Main.M8.bBrakeRelease, BOOL, 639214936 (8)
        Main.M8.bHardwareEnable, BOOL, 639214944 (8)
        Main.M8.bHome, BOOL, 639214928 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 639214920 (8)
        Main.M8.bLimitForwardEnable, BOOL, 639214912 (8)
        Main.M8.nRawEncoderINT, INT, 639215056 (16)
        Main.M8.nRawEncoderUINT, UINT, 639215040 (16)
        Main.M8.nRawEncoderULINT, ULINT, 639214976 (64)
        Main.M9, ST_MotionStage, 639531200 (25984)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 639532288 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 639531264 (1024)
        Main.M9.bBrakeRelease, BOOL, 639540312 (8)
        Main.M9.bHardwareEnable, BOOL, 639540320 (8)
        Main.M9.bHome, BOOL, 639540304 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 639540296 (8)
        Main.M9.bLimitForwardEnable, BOOL, 639540288 (8)
        Main.M9.nRawEncoderINT, INT, 639540432 (16)
        Main.M9.nRawEncoderUINT, UINT, 639540416 (16)
        Main.M9.nRawEncoderULINT, ULINT, 639540352 (64)
        Main.mcReadParameterPitchM1L0, MC_ReadParameter, 638876096 (4288)
        Main.mcReadParameterPitchM2L0, MC_ReadParameter, 642861824 (4288)
        Main.nEncCntPitchM1L0, UDINT, 638875872 (32)
        Main.nEncCntPitchM2L0, UDINT, 642861600 (32)
        Main.nEncCntXdwnM1L0, UDINT, 638875840 (32)
        Main.nEncCntXdwnM2L0, UDINT, 642861568 (32)
        Main.nEncCntXupM1L0, UDINT, 638875808 (32)
        Main.nEncCntXupM2L0, UDINT, 642861536 (32)
        Main.nEncCntYdwnM1L0, UDINT, 638875776 (32)
        Main.nEncCntYdwnM2L0, UDINT, 642861504 (32)
        Main.nEncCntYupM1L0, UDINT, 634894688 (32)
        Main.nEncCntYupM2L0, UDINT, 638876064 (32)
        Main.nEncRefPitchM1L0, UDINT, 638876032 (32)
        Main.nEncRefPitchM2L0, UDINT, 642861760 (32)
        Main.nEncRefXdwnM1L0, UDINT, 638876000 (32)
        Main.nEncRefXdwnM2L0, UDINT, 642861728 (32)
        Main.nEncRefXupM1L0, UDINT, 638875968 (32)
        Main.nEncRefXupM2L0, UDINT, 642861696 (32)
        Main.nEncRefYdwnM1L0, UDINT, 638875936 (32)
        Main.nEncRefYdwnM2L0, UDINT, 642861664 (32)
        Main.nEncRefYupM1L0, UDINT, 638875904 (32)
        Main.nEncRefYupM2L0, UDINT, 642861632 (32)

.. raw:: html

   </details>
   <br />


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.fbPmpsFileReader, FB_JsonFileToJsonDoc, 633569344 (928512)
        MOTION_GVL.fbStandardPMPSDB, FB_Standard_PMPSDB, 634497856 (90624)
        MOTION_GVL.nMaxStateMotorCount, UINT, 633569312 (16)
        MOTION_GVL.nMaxStates, UINT, 633569328 (16)


MotionConstants
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MotionConstants.MAX_STATE_MOTORS, UINT, 634588480 (16)


P_CoatingProtections
^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        P_CoatingProtections.fbStripProtMR1L0, FB_MirrorTwoCoatingProtection, 648674880 (192896)
        P_CoatingProtections.fbStripProtMR2L0, FB_MirrorTwoCoatingProtection, 648867776 (192896)


P_Serial_Com
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        P_Serial_Com.fbSerialLineControl_EL6001_M1L0, SerialLineControl, 648653536 (10432)
        P_Serial_Com.fbSerialLineControl_EL6001_M2L0, SerialLineControl, 648663968 (10432)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT (81..10000), 3366016 (32)


PiezoSerial
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PiezoSerial.fbE621SerialDriver_M1L0, FB_PI_E621_SerialDriver, 634663200 (109632)
        PiezoSerial.fbE621SerialDriver_M2L0, FB_PI_E621_SerialDriver, 634773120 (109632)
        PiezoSerial.rtInitParams_M1L0, R_TRIG, 634772832 (64)
        PiezoSerial.rtInitParams_M2L0, R_TRIG, 634882752 (64)
        PiezoSerial.tonTimeoutRst_M1L0, TON, 634772896 (224)
        PiezoSerial.tonTimeoutRst_M2L0, TON, 634882816 (224)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 634593408 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634588496 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 634593440 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634593712 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634595552 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634593792 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634597344 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634593472 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634593600 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634592320 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634599424 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634598400 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634597328 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634597312 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634593504 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634593696 (16)
        PMPS_GVL.PERange, PE_Ranges, 634593344 (32)
        PMPS_GVL.reVHyst, REAL, 634598368 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634593728 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634590560 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634588800 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 634593376 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634593664 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634593536 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634600480 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634600448 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634600512 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634600544 (256)


PRG_MR1L0_HOMS
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>43 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR1L0_HOMS.astCoatingStatesPitch, ST_PositionState, 650819904 (55680)
        PRG_MR1L0_HOMS.astCoatingStatesY, ST_PositionState, 650764224 (55680)
        PRG_MR1L0_HOMS.bActivateVarCoolMR1L0, BOOL, 660295312 (8)
        PRG_MR1L0_HOMS.eStateGet, E_MR1L0_CoatingStates, 649067104 (16)
        PRG_MR1L0_HOMS.eStateSet, E_MR1L0_CoatingStates, 642861808 (16)
        PRG_MR1L0_HOMS.fbCoatingStates, FB_PositionStatePMPS2D, 649067136 (1516864)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].Axis.NcToPlc, NCTOPLC_AXIS_REF, 650340096 (2048)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].Axis.PlcToNc, PLCTONC_AXIS_REF, 650339072 (1024)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].bBrakeRelease, BOOL, 650348120 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].bHardwareEnable, BOOL, 650348128 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].bHome, BOOL, 650348112 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].bLimitBackwardEnable, BOOL, 650348104 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].bLimitForwardEnable, BOOL, 650348096 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderINT, INT, 650348240 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderUINT, UINT, 650348224 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderULINT, ULINT, 650348160 (64)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].Axis.NcToPlc, NCTOPLC_AXIS_REF, 650366080 (2048)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].Axis.PlcToNc, PLCTONC_AXIS_REF, 650365056 (1024)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].bBrakeRelease, BOOL, 650374104 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].bHardwareEnable, BOOL, 650374112 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].bHome, BOOL, 650374096 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].bLimitBackwardEnable, BOOL, 650374088 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].bLimitForwardEnable, BOOL, 650374080 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderINT, INT, 650374224 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderUINT, UINT, 650374208 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderULINT, ULINT, 650374144 (64)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].Axis.NcToPlc, NCTOPLC_AXIS_REF, 650392064 (2048)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].Axis.PlcToNc, PLCTONC_AXIS_REF, 650391040 (1024)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].bBrakeRelease, BOOL, 650400088 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].bHardwareEnable, BOOL, 650400096 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].bHome, BOOL, 650400080 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].bLimitBackwardEnable, BOOL, 650400072 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].bLimitForwardEnable, BOOL, 650400064 (8)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderINT, INT, 650400208 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderUINT, UINT, 650400192 (16)
        PRG_MR1L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderULINT, ULINT, 650400128 (64)
        PRG_MR1L0_HOMS.fbCoolingPanel, FB_Axilon_Cooling_2f1p, 650875584 (1216)
        PRG_MR1L0_HOMS.fbCoolingPanel.fbFlow_1.iRaw, INT, 650875808 (16)
        PRG_MR1L0_HOMS.fbCoolingPanel.fbFlow_2.iRaw, INT, 650876512 (16)
        PRG_MR1L0_HOMS.fbCoolingPanel.fbPress_1.iRaw, INT, 650876128 (16)
        PRG_MR1L0_HOMS.fbPitchSetup, FB_StateSetupHelper, 650672256 (88256)
        PRG_MR1L0_HOMS.fbYSetup, FB_StateSetupHelper, 650584000 (88256)
        PRG_MR1L0_HOMS.stDefaultPitch, ST_PositionState, 650760512 (3712)

.. raw:: html

   </details>
   <br />


PRG_MR2L0_HOMS
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>40 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR2L0_HOMS.astCoatingStatesY, ST_PositionState, 652482112 (55680)
        PRG_MR2L0_HOMS.bActivateVarCoolMR2L0, BOOL, 660295320 (8)
        PRG_MR2L0_HOMS.eStateGet, E_MR2L0_CoatingStates, 652393792 (16)
        PRG_MR2L0_HOMS.eStateSet, E_MR2L0_CoatingStates, 649067120 (16)
        PRG_MR2L0_HOMS.fbCoatingStates, FB_PositionStatePMPS1D, 650876992 (1516800)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].Axis.NcToPlc, NCTOPLC_AXIS_REF, 652149888 (2048)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].Axis.PlcToNc, PLCTONC_AXIS_REF, 652148864 (1024)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].bBrakeRelease, BOOL, 652157912 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].bHardwareEnable, BOOL, 652157920 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].bHome, BOOL, 652157904 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].bLimitBackwardEnable, BOOL, 652157896 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].bLimitForwardEnable, BOOL, 652157888 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderINT, INT, 652158032 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderUINT, UINT, 652158016 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[1].nRawEncoderULINT, ULINT, 652157952 (64)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].Axis.NcToPlc, NCTOPLC_AXIS_REF, 652175872 (2048)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].Axis.PlcToNc, PLCTONC_AXIS_REF, 652174848 (1024)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].bBrakeRelease, BOOL, 652183896 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].bHardwareEnable, BOOL, 652183904 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].bHome, BOOL, 652183888 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].bLimitBackwardEnable, BOOL, 652183880 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].bLimitForwardEnable, BOOL, 652183872 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderINT, INT, 652184016 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderUINT, UINT, 652184000 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[2].nRawEncoderULINT, ULINT, 652183936 (64)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].Axis.NcToPlc, NCTOPLC_AXIS_REF, 652201856 (2048)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].Axis.PlcToNc, PLCTONC_AXIS_REF, 652200832 (1024)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].bBrakeRelease, BOOL, 652209880 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].bHardwareEnable, BOOL, 652209888 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].bHome, BOOL, 652209872 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].bLimitBackwardEnable, BOOL, 652209864 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].bLimitForwardEnable, BOOL, 652209856 (8)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderINT, INT, 652210000 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderUINT, UINT, 652209984 (16)
        PRG_MR2L0_HOMS.fbCoatingStates.astMotionStageMax[3].nRawEncoderULINT, ULINT, 652209920 (64)
        PRG_MR2L0_HOMS.fbCoolingPanel, FB_Axilon_Cooling_2f1p, 652537792 (1216)
        PRG_MR2L0_HOMS.fbCoolingPanel.fbFlow_1.iRaw, INT, 652538016 (16)
        PRG_MR2L0_HOMS.fbCoolingPanel.fbFlow_2.iRaw, INT, 652538720 (16)
        PRG_MR2L0_HOMS.fbCoolingPanel.fbPress_1.iRaw, INT, 652538336 (16)
        PRG_MR2L0_HOMS.fbYSetup, FB_StateSetupHelper, 652393856 (88256)

.. raw:: html

   </details>
   <br />


PRG_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 652539648 (138752)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 652540448 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 652542208 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 652543969 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 652543968 (1)
        PRG_PMPS.nMR1L0_Pitch_ENC_PMPS, ULINT, 652678400 (64)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 654668032 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 654667520 (128)
        TC_EVENT_CLASSES.TcIPCDiagEventClass, GUID, 654668160 (128)
        TC_EVENT_CLASSES.TcIPCDiagPlcApiEventClass, GUID, 654668288 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 654667648 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 654667776 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 654667392 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 654667904 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, ST_LCLSGeneralEventClass, 654701440 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 654640896 (2048)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PiezoDriver, _Implicit_Task_Info, 654648960 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 654649664 (704)
        TwinCAT_SystemInfoVarList.__SerialIO, _Implicit_Task_Info, 654648256 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 654642944 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 654644992 (3072)
        TwinCAT_SystemInfoVarList._TaskOid_PiezoDriver, OTCID, 654648160 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 654648224 (32)
        TwinCAT_SystemInfoVarList._TaskOid_SerialIO, OTCID, 654648096 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PiezoDriver, OTCID, 654648128 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 654648192 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_SerialIO, OTCID, 654648064 (32)

.. raw:: html

   </details>
   <br />


